[tool.poetry]
name = "movie-analytics-api"
version = "0.1.0"
description = ""
authors = ["Alex Prestes <alex.prestes@usp.br>"]
readme = "README.md"
packages = [{include = "movie_analytics_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
